<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingBottom="48dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_water_intake_bottom_sheet_title"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginVertical="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TimePicker
            android:id="@+id/add_water_intake_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/add_water_intake_volume"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:hint="@string/volume_text"
                android:importantForAutofill="no"
                android:inputType="number"
                android:digits="0123456789"
                android:singleLine="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/_200"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:text="@string/ml"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/add_water_intake_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/add_water_intake_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:backgroundTint="?attr/colorAccent"/>
    </LinearLayout>
</LinearLayout>