<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_reset_password_button"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_to_register"
            android:layout_marginTop="35dp"
            android:text="@string/login_link_to_register"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>