<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/resetEditTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_password_button"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_button"
            android:layout_marginTop="20dp"
            android:text="@string/reset_password_back"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>